# MII-Ethernet-on-Raspberry-Pi-Pico

./: CMakeLists.txt  README.md  defines.h  ethernet.h  includes.h  main.c  mii_tx.pio  miim.h  sensors.h  test.h
header/: defines.h  ethernet.h  includes.h  miim.h  sensors.h  test.h
src/: ethernet.c  main.c  mii_rx.pio  mii_tx.pio  miim.c  sensors.c  test.c
